...
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:id="@+id/admin_profile_page"
    tools:context=".Profile">


    <include
        android:id="@+id/include3"
        layout="@layout/profilepage">
...
