...
    android:background="@android:color/white"
    android:paddingLeft="40dp"
    android:paddingTop="50dp"
    android:paddingRight="40dp"
    android:paddingBottom="50dp"
    tools:context=".Profile"
    android:id="@+id/attendee_profile_page"
    >


    <include
        android:id="@+id/include"
        layout="@layout/profilepage">
...
