...
        android:background="@drawable/round_button"
        android:src="@drawable/announcements_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nav_a_events_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:src="@drawable/events_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nav_camera_btn"
...
        android:id="@+id/nav_camera_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:src="@drawable/camera_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nav_a_profile_btn"
        app:layout_constraintStart_toEndOf="@+id/nav_a_events_btn" />

    <ImageButton
        android:id="@+id/nav_a_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
