...
            android:background="@drawable/spinner_box"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Spinner
                android:id="@+id/edit_profile_usertype"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

    </LinearLayout>

...
        android:background="@drawable/rect_rounded_button"
        android:src="@drawable/trash_can_outline"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toEndOf="@+id/frameLayout" />

    <Button
        android:id="@+id/save_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/add"
        android:text="Save"
        android:textColor="@color/black"
...
