...
        android:id="@+id/nav_ad_images_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:src="@drawable/image_multiple_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nav_ad_profile_btn"
        app:layout_constraintStart_toEndOf="@+id/nav_ad_users_btn" />


    <ImageButton
        android:id="@+id/nav_ad_users_btn"
        android:layout_width="wrap_content"
...
